--- a/task/templates/update_task.html
+++ b/task/templates/update_task.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div class="relative bg-gray-900 pt-5 flex flex-col border-2 w-full h-screen items-center align-center content-center justify-center">
-    <a href='/tasks/' class="text-3xl font-bold text-white">
+    <a href='/main/' class="text-3xl font-bold text-white">
       To Do App - Update {{select.description}}
     </a>
     
