--- a/task/templates/list_tasks.html
+++ b/task/templates/list_tasks.html
@@ -18,7 +18,7 @@
     </a>
 
     <div class="h-full relative flex w-3/12 flex-col justify-start">
-    <form class="relative  " action="/tasks/new/" method="POST">
+    <form class="relative  " action="/main/new/" method="POST">
       {% csrf_token %}
         <div>
           <label for="title" class="block font-bold  text-sm font-medium leading-6 text-white">Title</label>
